feat: add GetApiV1Users
